WW-5341 Clean up OgnlUtilTest